dando forma ao projeto

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,48 @@
     <link rel="stylesheet" href="stylesheets/style.css" media="all">
   </head>
   <body>
+
+    <section class = cabecalho>
+      <div class="logo">
+
+      </div>
+
+      <div class="ranking">
+
+      </div>
+    </section>
+
+    <section class="primeirosColocados">
+        <div class="primeiro">
+            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+            <h1>CONQUISTANDO RESULTADOS</h1>
+        </div>
+
+        <div class="primeiro">
+            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+            <h1>CONQUISTANDO RESULTADOS</h1>
+        </div>
+
+        <div class="primeiro">
+            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+            <h1>CONQUISTANDO RESULTADOS</h1>
+        </div>
+
+        <div class="primeiro">
+            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+            <h1>CONQUISTANDO RESULTADOS</h1>
+        </div>
+
+        <div class="primeiro">
+            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+            <h1>CONQUISTANDO RESULTADOS</h1>
+        </div>
+
+    </section>
+
+    <h1>ha ha Ha ha ha</h1>
     <!-- let's code :D -->
 
     <script src="javascripts/main.js"></script>
+  </body>
 </html>
