adicionando logo e a palavra ranking

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,12 @@
   <body>
 
     <section class = cabecalho>
-      <div class="logo">
-
-      </div>
+      <img class="logo" src="img/logo.png">
 
       <div class="ranking">
-
+        <p>RANKING</p>
       </div>
+
     </section>
 
     <section class="primeirosColocados">
