colocar o corpo todo do body em uma div. adicionar as imagens dos autores

--- a/public/index.html
+++ b/public/index.html
@@ -4,45 +4,52 @@
     <meta charset="UTF-8">
     <title>R7 FrontEnd Test</title>
     <link rel="stylesheet" href="stylesheets/style.css" media="all">
+    <link rel="stylesheet" href="stylesheets/style2.css" media="all">
+
   </head>
   <body>
 
-    <section class = cabecalho>
-      <img class="logo" src="img/logo.png">
+    <div>
+      <div class="corpo">
+        <section class = cabecalho>
+        <img class="logo" src="img/logo.png">
 
-      <div class="ranking">
-        <p>RANKING</p>
+        <div class="ranking">
+          <p>RANKING</p>
+        </div>
+
+        </section>
+
+        <section class="primeirosColocados">
+          <div class="primeiro">
+              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+              <h1>CONQUISTANDO RESULTADOS</h1>
+          </div>
+
+          <div class="primeiro">
+              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+              <h1>CONQUISTANDO RESULTADOS</h1>
+          </div>
+
+          <div class="primeiro">
+              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+              <h1>CONQUISTANDO RESULTADOS</h1>
+          </div>
+
+          <div class="primeiro">
+              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+              <h1>CONQUISTANDO RESULTADOS</h1>
+          </div>
+
+          <div class="primeiro">
+              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
+              <h1>CONQUISTANDO RESULTADOS</h1>
+          </div>
+        </section>
       </div>
+    </div>
 
-    </section>
 
-    <section class="primeirosColocados">
-        <div class="primeiro">
-            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-            <h1>CONQUISTANDO RESULTADOS</h1>
-        </div>
-
-        <div class="primeiro">
-            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-            <h1>CONQUISTANDO RESULTADOS</h1>
-        </div>
-
-        <div class="primeiro">
-            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-            <h1>CONQUISTANDO RESULTADOS</h1>
-        </div>
-
-        <div class="primeiro">
-            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-            <h1>CONQUISTANDO RESULTADOS</h1>
-        </div>
-
-        <div class="primeiro">
-            <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-            <h1>CONQUISTANDO RESULTADOS</h1>
-        </div>
-
-    </section>
 
     <h1>ha ha Ha ha ha</h1>
     <!-- let's code :D -->
