Adicionar div de atores e textos. Adicionar imagens dos atores. Adicionar nomes e descrição dos atores. Colocar borda nos atores

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>R7 FrontEnd Test</title>
+    <link rel="stylesheet" href="stylesheets/reset.css" media="all">
     <link rel="stylesheet" href="stylesheets/style.css" media="all">
-    <link rel="stylesheet" href="stylesheets/style2.css" media="all">
 
   </head>
   <body>
 
-    <div>
+    <div class="wrapper">
       <div class="corpo">
         <section class = cabecalho>
         <img class="logo" src="img/logo.png">
@@ -21,37 +21,78 @@
         </section>
 
         <section class="primeirosColocados">
-          <div class="primeiro">
-              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-              <h1>CONQUISTANDO RESULTADOS</h1>
+          <div class="apresentacao">
+
+            <div classe="imagem">
+              <img class="  ator" src="img/barbara.png">
+            </div>
+
+            <div classe="ator">
+              <h1>Bárbara Evans</h1>
+              <h3>Modelo e filha de Monique Evans</h3>
+            </div>
+
           </div>
 
-          <div class="primeiro">
-              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-              <h1>CONQUISTANDO RESULTADOS</h1>
+          <div class="apresentacao">
+
+            <div classe="imagem">
+              <img class="ator" src="img/yudi.png">
+            </div>
+
+            <div classe="texto">
+              <h1>Yudi Tamashiro</h1>
+              <h3>Apresentador e ídolo teen</h3>
+            </div>
+
           </div>
 
-          <div class="primeiro">
-              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-              <h1>CONQUISTANDO RESULTADOS</h1>
+          <div class="apresentacao">
+
+            <div classe="imagem">
+              <img class="ator" src="img/rita.png">
+            </div>
+
+            <div classe="texto">
+              <h1>Rita Cadillac</h1>
+              <h3>Chacret n1</h3>
+            </div>
+
           </div>
 
-          <div class="primeiro">
-              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-              <h1>CONQUISTANDO RESULTADOS</h1>
+          <div class="apresentacao">
+
+            <div classe="imagem">
+              <img class="ator" src="img/gominho.png">
+            </div>
+
+            <div classe="texto">
+              <h1>Gominho</h1>
+              <h3>Fofoqueiro de plantão</h3>
+            </div>
+
           </div>
 
-          <div class="primeiro">
-              <h3>DESENVOLVENDO ESTRATÉGIAS INOVADORAS</h3>
-              <h1>CONQUISTANDO RESULTADOS</h1>
+          <div class="apresentacao">
+
+            <div classe="imagem">
+              <img class="ator" src="img/andressa.png">
+            </div>
+
+            <div classe="texto">
+              <h1>Andressa Urach</h1>
+              <h3>Personalidade da mídia</h3>
+            </div>
+
           </div>
+
         </section>
       </div>
     </div>
 
 
 
-    <h1>ha ha Ha ha ha</h1>
+
     <!-- let's code :D -->
 
     <script src="javascripts/main.js"></script>
