--- a/public/index.html
+++ b/public/index.html
@@ -23,65 +23,70 @@
         <section class="primeirosColocados">
           <div class="apresentacao">
 
-            <div classe="imagem">
+            <div class="imagem">
               <img class="  ator" src="img/barbara.png">
+              <div class="numerador"><p>1</p></div>
             </div>
 
-            <div classe="ator">
+            <div class="texto">
               <h1>Bárbara Evans</h1>
-              <h3>Modelo e filha de Monique Evans</h3>
+              <p>Modelo e filha de Monique Evans</p>
             </div>
 
           </div>
 
-          <div class="apresentacao">
+          <div class="apresentacao" id="par">
 
-            <div classe="imagem">
+            <div class="imagem">
               <img class="ator" src="img/yudi.png">
+              <div class="numerador"><p>2</p></div>
             </div>
 
-            <div classe="texto">
+            <div class="texto">
               <h1>Yudi Tamashiro</h1>
-              <h3>Apresentador e ídolo teen</h3>
+              <p>Apresentador e ídolo teen</p>
             </div>
 
           </div>
 
           <div class="apresentacao">
 
-            <div classe="imagem">
+            <div class="imagem">
               <img class="ator" src="img/rita.png">
+              <div class="numerador"><p>3</p></div>
             </div>
 
-            <div classe="texto">
+            <div class="texto">
               <h1>Rita Cadillac</h1>
-              <h3>Chacret n1</h3>
+              <p>Chacret n1</p>
             </div>
 
           </div>
 
-          <div class="apresentacao">
+          <div class="apresentacao" id="par">
 
-            <div classe="imagem">
+            <div class="imagem">
               <img class="ator" src="img/gominho.png">
+              <div class="numerador"><p>4</p></div>
             </div>
 
-            <div classe="texto">
+            <div class="texto">
               <h1>Gominho</h1>
-              <h3>Fofoqueiro de plantão</h3>
+              <p>Fofoqueiro de plantão</p>
             </div>
 
           </div>
 
           <div class="apresentacao">
 
-            <div classe="imagem">
+            <div class="imagem">
               <img class="ator" src="img/andressa.png">
+              <div class="numerador"><p>5</p></div>
             </div>
 
-            <div classe="texto">
+            <div class="texto">
               <h1>Andressa Urach</h1>
-              <h3>Personalidade da mídia</h3>
+              <p>Personalidade da mídia</p>
             </div>
 
           </div>
