adicionar hover nas divs apresentação.

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
           </div>
 
-          <div class="apresentacao" id="par">
+          <div class="apresentacao">
 
             <div class="imagem">
               <img class="ator" src="img/yudi.png">
@@ -63,7 +63,7 @@
 
           </div>
 
-          <div class="apresentacao" id="par">
+          <div class="apresentacao">
 
             <div class="imagem">
               <img class="ator" src="img/gominho.png">
