colocar div de votacao

--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,38 @@
               <p>Personalidade da mídia</p>
             </div>
 
+
+
           </div>
 
         </section>
+
+          <div class="none">
+
+              <div class="votacao">
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>31%</p>
+                  </div>
+                </div>
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>NÃO GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>63%</p>
+                  </div>
+                </div>
+              </div>
+
+          </div>
       </div>
     </div>
 
