editar div de votação.

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,32 @@
               <p>Modelo e filha de Monique Evans</p>
             </div>
 
+            <div class="none">
+
+              <div class="votacao">
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>74%</p>
+                  </div>
+                </div>
+
+                <div class="naogosta">
+                  <div class="title">
+                    <p>NÃO GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>34%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="apresentacao">
@@ -45,6 +71,32 @@
             <div class="texto">
               <h1>Yudi Tamashiro</h1>
               <p>Apresentador e ídolo teen</p>
+            </div>
+
+            <div class="none">
+
+              <div class="votacao">
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>45%</p>
+                  </div>
+                </div>
+
+                <div class="naogosta">
+                  <div class="title">
+                    <p>NÃO GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>55%</p>
+                  </div>
+                </div>
+              </div>
             </div>
 
           </div>
@@ -61,6 +113,32 @@
               <p>Chacret n1</p>
             </div>
 
+            <div class="none">
+
+              <div class="votacao">
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>18%</p>
+                  </div>
+                </div>
+
+                <div class="naogosta">
+                  <div class="title">
+                    <p>NÃO GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>82%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="apresentacao">
@@ -73,6 +151,32 @@
             <div class="texto">
               <h1>Gominho</h1>
               <p>Fofoqueiro de plantão</p>
+            </div>
+
+            <div class="none">
+
+              <div class="votacao">
+
+                <div class="gosta">
+                  <div class="title">
+                    <p>GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>37%</p>
+                  </div>
+                </div>
+
+                <div class="naogosta">
+                  <div class="title">
+                    <p>NÃO GOSTAM</p>
+                  </div>
+
+                  <div class="porcentagem">
+                    <p>63%</p>
+                  </div>
+                </div>
+              </div>
             </div>
 
           </div>
@@ -89,13 +193,7 @@
               <p>Personalidade da mídia</p>
             </div>
 
-
-
-          </div>
-
-        </section>
-
-          <div class="none">
+            <div class="none">
 
               <div class="votacao">
 
@@ -109,7 +207,7 @@
                   </div>
                 </div>
 
-                <div class="gosta">
+                <div class="naogosta">
                   <div class="title">
                     <p>NÃO GOSTAM</p>
                   </div>
@@ -119,6 +217,12 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+
+        </section>
+
+
 
           </div>
       </div>
